# agent-economy-wallet

./: .dockerignore  .env.example  .env.guide.md  .gitignore  ARTICLE.md  BUYER_QUICKSTART.md  DEEP-DIVE.md  DEMO-PROMPTS.md  Dockerfile  MERCHANT_QUICKSTART.md  Makefile  README.md  SECURITY.md  SKILLS.md  docker-compose.yml  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
demo/: 01-create-agents.ts  02-fund-agents.ts  03-run-agents.ts  04-observe.ts  package.json  run-demo.ts  tsconfig.json
docs/: architecture.mdx  demo.mdx  introduction.mdx  mint.json  quickstart.mdx  security.mdx
docs/api/: analyze-token.mdx  fetch-price.mdx  manifest.mdx  registry.mdx  reputation.mdx
docs/cli/: cli.mdx  overview.mdx
docs/core/: cli.mdx  kora.mdx  wallet-core.mdx
docs/infra/: cli.mdx  docker.mdx  explorer.mdx  kora.mdx  wallet-core.mdx
docs/kora/: overview.mdx
docs/mcp-prompts/: daily-report.mdx  overview.mdx  risk-assessment.mdx  security-audit.mdx  wallet-setup.mdx  x402-payment.mdx
docs/mcp-resources/: audit-logs.mdx  audit.mdx  overview.mdx  (+3 more)
examples/: direct-sdk.ts  package.json  tsconfig.json
kora/: README.md  kora.toml  signers.toml
programs/onchain-program/programs/onchain-program/: Cargo.toml
programs/onchain-program/programs/onchain-program/src/: errors.rs  lib.rs
programs/onchain-program/programs/onchain-program/src/instructions/: mod.rs  reputation.rs  streaming.rs
programs/onchain-program/programs/onchain-program/src/state/: merchant.rs  mod.rs  stream_session.rs
scripts/: phantom-to-kora.mjs
skills/: SKILL.md
(+27 files in other folders)
