[package]
name = "onchain-program"
version = "0.1.0"
description = "Agent Economy — on-chain reputation + streaming payments via MagicBlock ER"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "onchain_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "*", features = ["anchor"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
